# nn-hal

./: Android.bp  BUILD.gn  BasePreparedModel.cpp  BasePreparedModel.h  Driver.cpp  Driver.h  ExecuteBase.h  GreeterClient.h  utils.cpp  utils.h
cpu/: CpuPreparedModel.cpp  CpuPreparedModel.h
gna/: GnaPreparedModel.cpp  GnaPreparedModel.h
graphAPI/: Android.bp  IENetwork.h  IRDocument.cpp  IRLayer.cpp  IRLayer.h  IRLayers.h  create_ngraph.hpp
include/: BasePreparedModel.h  DevicePlugin.h  Driver.h  ModelManager.h  NgraphNwManager.h  NgraphOpsFactory.h  Utils.h
include/ops/: Add.h  BaseOp.h  FullyConnected.h
intel_nn_hal/: GnaPreparedModel.cpp  GnaPreparedModel.h  PreparedModel.cpp  Utils.h
intel_nn_hal/graphAPI/: GnaNetwork.cpp
operations/: Add.cpp  AveragePool.cpp  Concatination.cpp  Conolution.cpp  DepthiwiseConvolution.cpp  FullyConnected.cpp  L2Normalization.cpp  LocalResponseNormalization.cpp  Logistic.cpp  MaxPool.cpp  Mul.cpp  Relu.cpp  Relu1.cpp  Relu6.cpp  Softmax.cpp  Tanh.cpp  common.h  test.cpp
operations/include/: Add.h  AveragePool.h  Concatination.h  Convolution.h  DepthwiseConvolution.h  FullyConnected.h  L2Normalization.h  LocalResponseNormalization.h  Logistic.h  MaxPool.h  Mul.h  Relu.h  Relu1.h  Relu6.h  Reshape.h  Softmax.h  Tanh.h  common.h  fusion.h  ops.h
operations/src/: Add.cpp  AveragePool.cpp  Concatination.cpp  Convolution.cpp  DepthiwiseConvolution.cpp  DepthwiseConvolution.cpp  FullyConnected.cpp  L2Normalization.cpp  LocalResponseNormalization.cpp  Logistic.cpp  MaxPool.cpp  Mul.cpp  Relu.cpp  Relu1.cpp  Relu6.cpp  Reshape.cpp  Softmax.cpp  Tanh.cpp
src/: BasePreparedModel.cpp  DevicePlugin.cpp  Driver.cpp  ModelManager.cpp  NgraphNwManager.cpp  Utils.cpp  workspace.code-workspace
src/ops/: Add.cpp  BaseOp.cpp  FullyConnected.cpp
