import("//common-mk/pkg_config.gni")

group("all") {
    deps = [
        ":vendor-nn-hal",
        ":intel_nnhal",
    ]
}

shared_library("vendor-nn-hal") {
  configs += [
    ":target_defaults",
  ]
  deps = [
    ":intel_nnhal",
  ]
  libs = [
    "pthread",
    "rt",
    "tensorflowlite",
    "textclassifier"
  ]
}

config("target_defaults") {
    cflags = [
        "-Wall",
        "-Wno-error",
        "-Wextra",
        "-Wno-unuse",
    ]
    cflags_cc = [
        "-std=c++17",
        "-Wno-inconsistent-missing-override",
    ]
    ldflags = [
        "-Wl,--no-as-needed",
        "-Wl,--no-undefined",
    ]
    include_dirs = [
        "${sysroot}/usr/include/aosp",
        "${sysroot}/usr/include/aosp/frameworks/ml",
        "${sysroot}/usr/include/aosp/frameworks/ml/nn/common/include",
        "${sysroot}/usr/include/aosp/frameworks/ml/nn/runtime/include",
        "${sysroot}/usr/include/aosp/frameworks/ml/nn/driver/cache",
    ]
}

shared_library("intel_nnhal") {
  configs += [
    ":target_defaults",
    "//common-mk:visibility_default",
  ]
  cflags_cc = [
    "-Wno-unused-variable",
    "-Wno-unused-parameter",
    "-Wno-non-virtual-dtor",
    "-Wno-missing-field-initializers",
    "-Wno-extern-c-compat",
    "-Wno-unused-local-typedef",
    "-Wno-unused-private-field",
    "-Wno-invalid-partial-specialization",
    "-Wno-array-bounds",
    "-D_FORTIFY_SOURCE=2",
    "-fexceptions",
    "-fvisibility=default",
    "-DIMPLEMENT_INFERENCE_ENGINE_API",
  ]
  deps=[
    ":pugixml"
  ]
  sources = [
    "src/gna_driver.cpp",
    "src/Driver.cpp",
    "src/Utils.cpp",
    "src/ModelManager.cpp",
    "src/ops/BaseOp.cpp",
    "src/ops/Add.cpp",
    "src/ops/FullyConnected.cpp",
    "src/NgraphNwManager.cpp",
    "src/BasePreparedModel.cpp",
    "src/DevicePlugin.cpp"
  ]
  include_dirs = [
    "./include",
    "./include/ops",
    "./include/cpu",
    "cpu/",
    "gna/",
    "operations/include",
    "graphAPI/",
    "../openvino-master/inference-engine/src/inference_engine",
    "../openvino-master/inference-engine/thirdparty/pugixml/src",
    "../openvino-master/inference-engine/include",
    "../openvino-master/inference-engine/include/cpp",
    "../openvino-master/inference-engine/include/details",
    "../openvino-master/inference-engine/include/details/os",
    "../openvino-master/inference-engine/include/cldnn",
    "../openvino-master/inference-engine/include/gna",
    "../openvino-master/inference-engine/include/hetero",
    "../openvino-master/inference-engine/include/mkldnn",
    "../openvino-master/inference-engine/include/openvx",
    "../openvino-master/inference-engine/include/vpu",
    "../openvino-master/inference-engine/src/legacy_api/include/legacy",
    "../openvino-master/inference-engine/src/legacy_api/include",
    "../openvino-master/inference-engine/src/inference_engine",
    "../openvino-master/inference-engine/src/dumper",
    "../openvino-master/inference-engine/src/inference_engine/cpp_interfaces",
    "../openvino-master/inference-engine/src/inference_engine/cpp_interfaces/base",
    "../openvino-master/inference-engine/src/inference_engine/cpp_interfaces/impl",
    "../openvino-master/inference-engine/src/inference_engine/cpp_interfaces/interface",
    "../openvino-master/inference-engine/thirdparty/pugixml/src/",
    "../openvino-master/inference-engine/src/plugin_api/",
  ]
  libs = [
    "pthread",
    "rt",
    "nnapi-support",
    "ngraph",
    "inference_engine_legacy",
    "inference_engine_c_api",
    "inference_engine_preproc",
    "inference_engine",
    "nn-common",
    "ssl",
    "crypto"
  ]
  lib_dirs = [
    "${sysroot}/usr/local/deployment_tools/inference_engine/lib/intel64/",
    "${sysroot}/usr/local/lib64"
  ]
}

static_library("pugixml") {
  configs += [
    ":target_defaults",
    "//common-mk:pic",
  ]
  cflags_cc = [
    "-Wno-unused-variable",
    "-Wno-unused-parameter",
    "-Wno-non-virtual-dtor",
    "-Wno-missing-field-initializers",
    "-Wno-extern-c-compat",
    "-Wno-unused-local-typedef",
    "-Wno-unused-private-field",
    "-Wno-invalid-partial-specialization",
    "-Wno-array-bounds",
    "-D_FORTIFY_SOURCE=2",
    "-fexceptions",
    "-fvisibility=default",
    "-DIMPLEMENT_INFERENCE_ENGINE_API",
  ]
  sources = [
    "../openvino-master/inference-engine/thirdparty/pugixml/src/pugixml.cpp"
  ]
  include_dirs = [
   "../openvino-master/inference-engine/thirdparty/pugixml/src",
  ]
}

